# ITK-KrcahSheetnessImageFilter

./: CMakeLists.txt  README.md  itk-module.cmake  setup.py
.circleci/: config.yml
examples/: CMakeLists.txt
examples/Descoteaux/: main.cxx
examples/DescoteauxMax/: main.cxx
examples/DescoteauxWithScaling/: main.cxx
examples/Krcah/: main.cxx
examples/ModifiedSheetness/: main.cxx
include/: itkAutomaticSheetnessParameterEstimationImageFilter.h  itkAutomaticSheetnessParameterEstimationImageFilter.hxx  itkBroadcastingBinaryFunctorImageFilter.h  itkBroadcastingBinaryFunctorImageFilter.hxx  itkFrobeniusNormImageFilter.h  itkKrcahBackgroundFunctor.h  itkKrcahSheetnessFeatureGenerator.h  itkKrcahSheetnessFeatureGenerator.hxx  itkKrcahSheetnessFeatureImageFilter.h  itkKrcahSheetnessFeatureImageFilter.hxx  itkKrcahSheetnessFunctor.h  itkKrcahSheetnessImageFilter.h  itkMaximumAbsoluteValueImageFilter.h  itkModifiedSheetnessImageFilter.h  itkTraceImageFilter.h
test/: CMakeLists.txt  itkKrcahSheetnessFeatureImageFilterTest.cxx  test_ModifiedSheetnessFunctor.cxx  test_Sheetness.cxx
test/Baseline/: itkKrcahSheetnessFeatureImageFilterTest.nii.sha512
test/Input/: 001-CT.nii.sha512
wrapping/: CMakeLists.txt  itkKrcahSheetnessFeatureImageFilter.wrap
